API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


24-Jan-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added TreeKey and TreeKeyIdx decendants
	Added SWGenBook, and RawGenBook general book support
		and test programs

04-Jan-2002     Troy A. Griffitts <scribe@crosswire.org>
	Happy B-Day MOM!
	Added new property in Makefile.cfg: globalconfdir
		defaulted to /etc

20-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added first cut of zLD

13-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added __u16, __u32, and __u64 raw data types
	Added byte swapping macros
	Added standard swordtoarch and archtosword macros
		in 16, 32, and 64 bit versions
	Added remove to entriesblk
	Added tests for byte swapping

08-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added new SWInputMethod class for keyboard mapping support.
	Added null input method which returns what it gets
	Added Hebrew Michigan-Claremont input method

02-Sep-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added new swbasicfilter.cpp that provides many common method needed
		to make an swfilter implementation.
	Changed ThMLHTML filter to extend SWBasicFilter to take advantage of
		the new class.
	Added new utilstr.cpp method toupperstr to convert a c_str to all
		uppercase.
	Added new methods to the key classes to provide non-operator methods
		to access features to which there were non previously.  Makes
		other language bindings much easier to produce.

* Release 1.5.2 *

26-Jul-2001     Troy A. Griffitts <scribe@crosswire.org>
	Applied Tom Wildsmith's patches to cheatah: cleaned up
		displaying of marked up texts; added nice about
		box with module about info; handled errors better
		on startup

27-Jun-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added roman numeral support in VerseKey parsing
	Fixed a number of memory bugs

20-Jun-2001     Troy A. Griffitts <scribe@crosswire.org>
	Packaging up for 1.5.2
	Fixed mod2zmod linking bug
